deployments/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server-deployment
  namespace: default
  labels:
    app: node-server-deployment
spec:
  replicas: 1 # number of pods
  selector:
    matchLabels:
      app: node-server-deployment
  template:
    metadata:
      labels:
        app: node-server-deployment
    spec:
      containers:
        - name: node-server
          image: us-west1-docker.pkg.dev/dcsc-371007/whole-food-whole-life/post-server-node:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
