deployments/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-service
spec:
  selector:
    app: node-server-deployment
  type: NodePort
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
